# azureml-infra-tools

./: LICENSE  README.md  environment.yml  example_hydra_file.yaml  pyproject.toml  setup.py
.github/workflows/: Publish.yml  Release.yml  main.yml
azureml_infra_tools/: __init__.py  cluster.py  credential.py  data.py  environment.py
azuremlutils/: __init__.py  cluster.py  credential.py  data.py  environment.py
tests/: test_credential.py
